infrastructure/security.tf
# # Security Group for Jenkins
# resource "aws_security_group" "jenkins_sg" {
#   name        = "jenkins-sg"
#   description = "Allow SSH and Jenkins traffic"
#   vpc_id      = aws_vpc.main_vpc.id

#   ingress { # SSH
#     from_port   = 22
#     to_port     = 22
#     protocol    = "tcp"
#     cidr_blocks = ["0.0.0.0/0"] # For production, restrict this to your specific IP
#   }

#   ingress { # Jenkins UI
#     from_port   = 8080
#     to_port     = 8080
#     protocol    = "tcp"
#     cidr_blocks = ["0.0.0.0/0"]
#   }

#   egress { # Allow all outbound traffic
#     from_port   = 0
#     to_port     = 0
#     protocol    = "-1"
#     cidr_blocks = ["0.0.0.0/0"]
#   }
# }

# Security Group for Tools (SonarQube & Nexus)
# resource "aws_security_group" "tools_sg" {
#   name        = "tools-sg"
#   description = "Allow SSH, SonarQube, and Nexus traffic"
#   vpc_id      = aws_vpc.main_vpc.id

#   ingress { # SSH
#     from_port   = 22
#     to_port     = 22
#     protocol    = "tcp"
#     cidr_blocks = ["0.0.0.0/0"]
#   }

#   ingress { # SonarQube UI
#     from_port   = 9000
#     to_port     = 9000
#     protocol    = "tcp"
#     cidr_blocks = ["0.0.0.0/0"]
#   }

#   ingress { # Nexus UI
#     from_port   = 8081
#     to_port     = 8081
#     protocol    = "tcp"
#     cidr_blocks = ["0.0.0.0/0"]
#   }

#   egress {
#     from_port   = 0
#     to_port     = 0
#     protocol    = "-1"
#     cidr_blocks = ["0.0.0.0/0"]
#   }
# }

# Security Group for EFS (Allow NFS traffic from Jenkins)
# resource "aws_security_group" "efs_sg" {
#   name        = "efs-sg"
#   description = "Allow inbound NFS traffic from Jenkins"
#   vpc_id      = aws_vpc.main_vpc.id

#   ingress {
#     description     = "NFS from Jenkins"
#     from_port       = 2049
#     to_port         = 2049
#     protocol        = "tcp"
#     security_groups = [aws_security_group.jenkins_sg.id]
#   }

#   egress {
#     from_port   = 0
#     to_port     = 0
#     protocol    = "-1"
#     cidr_blocks = ["0.0.0.0/0"]
# #   }
# # }

# # Security Group for RDS
# resource "aws_security_group" "rds_sg" {
#   name        = "rds-sg"
#   description = "Allow inbound Postgres traffic from Tools Server"
#   vpc_id      = aws_vpc.main_vpc.id

#   ingress {
#     from_port       = 5432
#     to_port         = 5432
#     protocol        = "tcp"
#     security_groups = [aws_security_group.tools_sg.id] # Only allows the Tools Server
#   }

#   egress {
#     from_port   = 0
#     to_port     = 0
#     protocol    = "-1"
#     cidr_blocks = ["0.0.0.0/0"]
#   }
# }
