infrastructure/vpc.tf
# 1. The VPC
resource "aws_vpc" "main_vpc" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_support   = true
  enable_dns_hostnames = true
  tags = { 
    Name = "${var.project_name}-VPC"
    }
}

# 2. Internet Gateway
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main_vpc.id
  tags = { Name = "${var.project_name}-IGW" }
}

# 3. Get Availability Zones
data "aws_availability_zones" "available" {
  state = "available"
}

# 4. Public Subnets
resource "aws_subnet" "public_subnet_1" {
  vpc_id                  = aws_vpc.main_vpc.id
  cidr_block              = "10.0.1.0/24"
  map_public_ip_on_launch = true
  availability_zone       = data.aws_availability_zones.available.names[0]
  tags = { 
    Name = "${var.project_name}-Public-Subnet-1" 
    "kubernetes.io/role/elb" = "1"              # (Tells AWS: "Put Public LBs here")
    "kubernetes.io/cluster/linksnap-cluster" = "owned"    #(Associates VPC with EKS Cluster)
    }
}

resource "aws_subnet" "public_subnet_2" {
  vpc_id                  = aws_vpc.main_vpc.id
  cidr_block              = "10.0.2.0/24"
  map_public_ip_on_launch = true
  availability_zone       = data.aws_availability_zones.available.names[1]
  tags = { 
    Name = "${var.project_name}-Public-Subnet-2"
    "kubernetes.io/role/elb" = "1"           
    "kubernetes.io/cluster/linksnap-cluster" = "owned" 
    }
}

# 5. Private Subnets (For RDS & Future EKS)
resource "aws_subnet" "private_subnet_1" {
  vpc_id                  = aws_vpc.main_vpc.id
  cidr_block              = "10.0.3.0/24"
  map_public_ip_on_launch = false # Private!
  availability_zone       = data.aws_availability_zones.available.names[0]
  tags = { 
    Name = "${var.project_name}-Private-Subnet-1"
    "kubernetes.io/role/internal-elb" = "1"               #(Tells AWS: "Put Private LBs here")
    "kubernetes.io/cluster/linksnap-cluster" = "owned"
     }
}

resource "aws_subnet" "private_subnet_2" {
  vpc_id                  = aws_vpc.main_vpc.id
  cidr_block              = "10.0.4.0/24"
  map_public_ip_on_launch = false # Private!
  availability_zone       = data.aws_availability_zones.available.names[1]
  tags = { 
    Name = "${var.project_name}-Private-Subnet-2"
    "kubernetes.io/role/internal-elb" = "1"    
    "kubernetes.io/cluster/linksnap-cluster" = "owned"
     }
}

# 6. Public Route Table (Has Internet)
resource "aws_route_table" "public_rt" {
  vpc_id = aws_vpc.main_vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }
  tags = { Name = "${var.project_name}-Public-RT" }
}

# 7. Private Route Table (Local Only - No Internet Cost)
resource "aws_route_table" "private_rt" {
  vpc_id = aws_vpc.main_vpc.id
  # No route to IGW here!
  tags = { Name = "${var.project_name}-Private-RT" }
}

# 8. Associations
resource "aws_route_table_association" "public_assoc_1" {
  subnet_id      = aws_subnet.public_subnet_1.id
  route_table_id = aws_route_table.public_rt.id
}
resource "aws_route_table_association" "public_assoc_2" {
  subnet_id      = aws_subnet.public_subnet_2.id
  route_table_id = aws_route_table.public_rt.id
}

resource "aws_route_table_association" "private_assoc_1" {
  subnet_id      = aws_subnet.private_subnet_1.id
  route_table_id = aws_route_table.private_rt.id
}
resource "aws_route_table_association" "private_assoc_2" {
  subnet_id      = aws_subnet.private_subnet_2.id
  route_table_id = aws_route_table.private_rt.id
}

# 1. Elastic IP for the NAT Gateway
resource "aws_eip" "nat" {
  domain = "vpc"
  
  tags = {
    Name = "linksnap-nat-eip"
  }
}

# 2. The NAT Gateway (Must live in a PUBLIC subnet)
resource "aws_nat_gateway" "main" {
  allocation_id = aws_eip.nat.id
  
  # We put the gateway in the first public subnet
  subnet_id     = aws_subnet.public_subnet_1.id

  tags = {
    Name = "linksnap-nat-gw"
  }

  # To ensure proper ordering, it is recommended to add an explicit dependency
  depends_on = [aws_internet_gateway.igw]
}


resource "aws_route" "private_nat_gateway" {
  route_table_id         = aws_route_table.private_rt.id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = aws_nat_gateway.main.id
}
